Make sure videos are centered on iOS. #7198

--- a/resources/gato-template-txstate2015/css/homepage/_video-modal.scss
+++ b/resources/gato-template-txstate2015/css/homepage/_video-modal.scss
@@ -23,7 +23,7 @@ div#video-modal {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    @include vendor-prefix(transform, translate(-50%, -50%));
     width: 70%;    
   }
 
